--- a/web/index.html
+++ b/web/index.html
@@ -187,7 +187,7 @@
                 <div class="col w-50 mt-3">
                     <div class="form-outline me-5">
                         <label class="form-label text-white" for="duration">How far</label>
-                        <input type="text" id="duration" class="form-control" placeholder="Journey distance"/>
+                        <input type="text" id="duration" class="form-control" placeholder="Journey duration"/>
                     </div>
                 </div>
 
@@ -3050,8 +3050,212 @@
 
     <section id="Reservation" style="width: 100%; height: 100vh ;background-color: whitesmoke">
 
+        <div class="container center-block ">
 
+            <div class="row w-100 h-25 text-center mt-2">
+                <figure class="text-center mt-2 text-black">
+                    <blockquote class="blockquote" style="border: 1px solid transparent">
+                        <p class="display-1" style="font-family: emoji">MAKE RESERVATION</p>
+                    </blockquote>
+                </figure>
+            </div>
+        </div>
 
+        <div class="border border-3 border-white rounded-1 shadow w-75 center-block" style="height: 81%">
+
+            <div class="mt-0 ms-2 me-5">
+                <form class="ms-5 me-5 " style="position: relative; top: 19px;">
+
+                    <div class="row mt-0">
+                        <div class="col ms-5">
+                            <label class="form-label text-dark fw-light fs-4"  style="display: inline">Name  :</label>
+                            <label class="form-label  fw-light fs-4 text-primary" for="reserveCustomerName" id="reserveCustomerName" style="display: inline">Bihara Methmini</label>
+                        </div>
+                        <div class="col ">
+                            <label class="form-label text-dark fw-light fs-4" style="display: inline">Address  :</label>
+                            <label class="form-label  fw-light fs-4 text-primary" for="reserveCustomerAddress" id="reserveCustomerAddress" style="display: inline">Galle</label>
+                        </div>
+                        <div class="col ">
+                            <label class="form-label text-dark fw-light fs-4" style="display: inline">Contact  :</label>
+                            <label class="form-label text-primary fw-light fs-4" for="reserveCustomerContact" id="reserveCustomerContact" style="display: inline">0785996321</label>
+                        </div>
+                    </div>
+
+                    <hr class="divider-horizontal-blurry mb-1 mt-3" style="" />
+
+                    <div class="row">
+                        <div class="col ms-5 mt-3">
+                            <label class="form-label text-dark fw-light fs-4" style="display: inline">Pickup Date  :</label>
+                            <label class="form-label text-primary fw-light fs-4" for="reservePickupDate" id="reservePickupDate" style="display: inline">2022-12-12</label>
+                        </div>
+                        <div class="col mt-3">
+                            <label class="form-label text-dark fw-light fs-4"  style="display: inline">Pickup Time  :</label>
+                            <label class="form-label text-primary fw-light fs-4" for="reservePickupTime" id="reservePickupTime" style="display: inline">06.12</label>
+                        </div>
+                        <div class="col mt-3">
+                            <label class="form-label text-dark fw-light fs-4"  style="display: inline">Pickup Venue  :</label>
+                            <label class="form-label text-primary fw-light fs-4" for="reservePickupVenue" id="reservePickupVenue" style="display: inline">Galle</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col ms-5 mt-3">
+                            <label class="form-label text-dark fw-light fs-4" style="display: inline">Return Date  :</label>
+                            <label class="form-label text-primary fw-light fs-4" for="reserveReturnDate" id="reserveReturnDate" style="display: inline">2022-12-12</label>
+                        </div>
+                        <div class="col mt-3">
+                            <label class="form-label text-dark fw-light fs-4"  style="display: inline">Return Time  :</label>
+                            <label class="form-label text-primary fw-light fs-4" for="reserveReturnTime" id="reserveReturnTime" style="display: inline">06.12</label>
+                        </div>
+                        <div class="col mt-3">
+                            <label class="form-label text-dark fw-light fs-4"  style="display: inline">Return Venue  :</label>
+                            <label class="form-label text-primary fw-light fs-4" for="reserveReturnVenue" id="reserveReturnVenue" style="display: inline">Galle</label>
+                        </div>
+                    </div>
+
+                    <div class="row ">
+                        <div class="col ms-5 mt-3">
+                            <label class="form-label text-dark fw-light fs-4" style="display: inline">Destination  :</label>
+                            <label class="form-label text-primary fw-light fs-4" for="reserveDestination" id="reserveDestination" style="display: inline">Colombo</label>
+                        </div>
+                        <div class="col mt-3">
+                            <label class="form-label text-dark fw-light fs-4"  style="display: inline">Duration  :</label>
+                            <label class="form-label text-primary fw-light fs-4" for="reserveDuration" id="reserveDuration" style="display: inline">2</label>
+                        </div>
+                        <div class="col mt-3">
+                        </div>
+                    </div>
+
+                    <hr class="divider-horizontal-blurry mb-0" style="" />
+
+                    <div class="row">
+                        <div class="col ms-5 mt-3">
+                            <!-- lose damage payment -->
+                            <div class="form-outline  me-4">
+                                <label class="form-label text-dark fw-light fs-4" for="loseDamagePayment" style="display: inline">Lose Damage Waiver Payment  :</label>
+                                <input type="text" id="loseDamagePayment" class="form-control shadow  border border-2 border-white bg-light rounded-3 w-25" style="display: inline"/>
+                            </div>
+                        </div>
+                    </div>
+
+                    <hr class="divider-horizontal-blurry mb-0" style="" />
+
+                    <div class="row">
+                        <div class="col ms-5 mt-3 mb-0">
+                            <!-- driver want or not -->
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="checkDriverIfWant" />
+                                <label class="form-check-label" for="checkDriverIfWant">If you want a driver please click</label>
+                            </div>
+                        </div>
+                        <div class="col mt-3 mb-0">
+                            <label class="form-label text-dark fw-light fs-4" style="display: inline">Driver Name  :</label>
+                            <label class="form-label text-primary fw-light fs-4" for="reserveDriverName" id="reserveDriverName" style="display: inline">Colombo</label>
+                        </div>
+                        <div class="col mt-3 mb-0">
+                            <label class="form-label text-dark fw-light fs-4" style="display: inline">Driver Contact  :</label>
+                            <label class="form-label text-primary fw-light fs-4" for="reserveDriverContact" id="reserveDriverContact" style="display: inline">0758992563</label>
+                        </div>
+                    </div>
+
+                    <hr class="divider-horizontal-blurry mb-0" style="" />
+
+                    <h3 class="text-center fw-bold text-success mb-1 ">Selected Cars For Rent</h3>
+
+                    <div>
+                        <table class="table align-middle mb-0 bg-white table-responsive">
+                            <thead class="bg-light">
+                            <tr>
+                                <th>Image</th>
+                                <th>Brand</th>
+                                <th>Colour</th>
+                                <th>Type</th>
+                                <th>Fuel Type</th>
+                                <th>Transmission Type</th>
+                                <th>Rent Fee</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <img src="assets/images/1200x-1.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        Susuki
+                                    </td>
+                                    <td>
+                                        White
+                                    </td>
+                                    <td>
+                                        General
+                                    </td>
+                                    <td>
+                                        Petrol
+                                    </td>
+                                    <td>
+                                        Auto
+                                    </td>
+                                    <td>
+                                        25000.00
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <img src="assets/images/1200x-1.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        Toyota
+                                    </td>
+                                    <td>
+                                        Black
+                                    </td>
+                                    <td>
+                                        General
+                                    </td>
+                                    <td>
+                                        Petrol
+                                    </td>
+                                    <td>
+                                        Auto
+                                    </td>
+                                    <td>
+                                        27000.00
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
+
+                    <!--button panel-->
+                    <div class="row mt-4">
+
+                        <div class="col"></div>
+
+                        <div class="col text-center ">
+                            <button type="button" class="btn btn-info btn-lg btn-floating ms-2 me-2 shadow">
+                                <i class="fas fa-key"></i>
+                                Reserve
+                            </button>
+                            <button type="button" class="btn btn-danger btn-lg btn-floating ms-2 me-2 shadow">
+                                <i class="fas fa-times"></i>
+                                Cancel
+                            </button>
+                        </div>
+
+                        <div class="col"></div>
+
+                    </div>
+
+                </form>
+
+            </div>
+
+        </div>
     </section>
 
 
