--- a/web/index.html
+++ b/web/index.html
@@ -761,74 +761,136 @@
 
     <!--CopyRight Page-->
     <section id="CopyRightPage" class="w-100 h-100" style="background-color: whitesmoke">
-        <div class="bg-black w-100 h-75" style="position: relative;top: 25%">
 
-            <div class="container-fluid mb-5 mt-5" style="width: 100%;height: 50%;position: relative;top: 20%;">
-                <div class="row w-100">
-                    <div class="col-12 border-2 border-danger ms-2 me-2 center-block" style="width: 40%">
-                        <div class="w-75">
-                            <h2 class="text-center text-white">About Us</h2>
-                            <p class="text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                A amet aperiam, blanditiis cumque eveniet, magni, minima
-                                mollitia officia quasi quod rem similique tempora! Eos, in, veritatis.
-                                Esse ipsum porro provident?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col border-2 border-danger ms-2 me-2 w-25">
-                        <h5 class=" text-white">Quick Links</h5>
-                        <ul class="list-group-light">
-                            <li class="text-white border-0"><a href="#">Home</a></li>
-                            <li class="text-white border-0"><a href="#">Cars</a></li>
-                            <li class="text-white border-0"><a href="#">Services</a></li>
-                            <li class="text-white border-0"><a href="#">About Us</a></li>
-                            <li class="text-white border-0"><a href="#">Blog</a></li>
-                            <li class="text-white border-0"><a href="#">Contact Us</a></li>
-                        </ul>
-                    </div>
-                    <div class="col border-2 border-danger ms-2 me-2 w-25">
-                        <h5 class=" text-white">Quick Links</h5>
-                        <ul class="list-group-light">
-                            <li class="text-white border-0"><a href="#">Home</a></li>
-                            <li class="text-white border-0"><a href="#">Cars</a></li>
-                            <li class="text-white border-0"><a href="#">Services</a></li>
-                            <li class="text-white border-0"><a href="#">About Us</a></li>
-                            <li class="text-white border-0"><a href="#">Blog</a></li>
-                            <li class="text-white border-0"><a href="#">Contact Us</a></li>
-                        </ul>
-                    </div>
-                    <div class="col border-2 border-danger ms-2 me-2 w-25">
-                        <h5 class=" text-white">Quick Links</h5>
-                        <ul class="list-group-light">
-                            <li class="text-white border-0"><a href="#">Home</a></li>
-                            <li class="text-white border-0"><a href="#">Cars</a></li>
-                            <li class="text-white border-0"><a href="#">Services</a></li>
-                            <li class="text-white border-0"><a href="#">About Us</a></li>
-                            <li class="text-white border-0"><a href="#">Blog</a></li>
-                            <li class="text-white border-0"><a href="#">Contact Us</a></li>
-                        </ul>
-                    </div>
-                    <div class="col border-2 border-danger ms-2 me-2 w-25">
-                        <h5 class=" text-white">Quick Links</h5>
-                        <ul class="list-group-light">
-                            <li class="text-white border-0"><a href="#">Home</a></li>
-                            <li class="text-white border-0"><a href="#">Cars</a></li>
-                            <li class="text-white border-0"><a href="#">Services</a></li>
-                            <li class="text-white border-0"><a href="#">About Us</a></li>
-                            <li class="text-white border-0"><a href="#">Blog</a></li>
-                            <li class="text-white border-0"><a href="#">Contact Us</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+       <div class="container-fluid w-100"  style="position: relative;top: 200px">
+           <!-- Footer -->
+           <footer class="text-center text-lg-start bg-light text-muted w-100 ">
+               <!-- Section: Social media -->
+               <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+                   <!-- Left -->
+                   <div class="me-5 d-none d-lg-block">
+                       <span>Get connected with us on social networks:</span>
+                   </div>
+                   <!-- Left -->
 
-            <hr class="divider-horizontal-blurry mt-0" />
+                   <!-- Right -->
+                   <div>
+                       <a href="" class="me-4 text-reset">
+                           <i class="fab fa-facebook-f"></i>
+                       </a>
+                       <a href="" class="me-4 text-reset">
+                           <i class="fab fa-twitter"></i>
+                       </a>
+                       <a href="" class="me-4 text-reset">
+                           <i class="fab fa-google"></i>
+                       </a>
+                       <a href="" class="me-4 text-reset">
+                           <i class="fab fa-instagram"></i>
+                       </a>
+                       <a href="" class="me-4 text-reset">
+                           <i class="fab fa-linkedin"></i>
+                       </a>
+                       <a href="" class="me-4 text-reset">
+                           <i class="fab fa-github"></i>
+                       </a>
+                   </div>
+                   <!-- Right -->
+               </section>
+               <!-- Section: Social media -->
 
-            <div class="mb-5 center-block">
-                <h5 class="text-center text-white mt-5">Copyright @2022 All rights reserved</h5>
-            </div>
+               <!-- Section: Links  -->
+               <section class="">
+                   <div class="container text-center text-md-start mt-5">
+                       <!-- Grid row -->
+                       <div class="row mt-3">
+                           <!-- Grid column -->
+                           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                               <!-- Content -->
+                               <h6 class="text-uppercase fw-bold mb-4">
+                                   <i class="fas fa-gem me-3"></i>Company name
+                               </h6>
+                               <p>
+                                   Here you can use rows and columns to organize your footer content. Lorem ipsum
+                                   dolor sit amet, consectetur adipisicing elit.
+                               </p>
+                           </div>
+                           <!-- Grid column -->
 
-        </div>
+                           <!-- Grid column -->
+                           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                               <!-- Links -->
+                               <h6 class="text-uppercase fw-bold mb-4">
+                                   Quick Links
+                               </h6>
+                               <p>
+                                   <a href="#!" class="text-reset">Home</a>
+                               </p>
+                               <p>
+                                   <a href="#!" class="text-reset">Cars</a>
+                               </p>
+                               <p>
+                                   <a href="#!" class="text-reset">Services</a>
+                               </p>
+                               <p>
+                                   <a href="#!" class="text-reset">About</a>
+                               </p>
+                               <p>
+                                   <a href="#!" class="text-reset">Contact</a>
+                               </p>
+                           </div>
+                           <!-- Grid column -->
+
+                           <!-- Grid column -->
+                           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                               <!-- Links -->
+                               <h6 class="text-uppercase fw-bold mb-4">
+                                   Useful links
+                               </h6>
+                               <p>
+                                   <a href="#!" class="text-reset">Pricing</a>
+                               </p>
+                               <p>
+                                   <a href="#!" class="text-reset">Settings</a>
+                               </p>
+                               <p>
+                                   <a href="#!" class="text-reset">Orders</a>
+                               </p>
+                               <p>
+                                   <a href="#!" class="text-reset">Help</a>
+                               </p>
+                           </div>
+                           <!-- Grid column -->
+
+                           <!-- Grid column -->
+                           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                               <!-- Links -->
+                               <h6 class="text-uppercase fw-bold mb-4">
+                                   Contact
+                               </h6>
+                               <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+                               <p>
+                                   <i class="fas fa-envelope me-3"></i>
+                                   info@example.com
+                               </p>
+                               <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+                               <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                           </div>
+                           <!-- Grid column -->
+                       </div>
+                       <!-- Grid row -->
+                   </div>
+               </section>
+               <!-- Section: Links  -->
+
+               <!-- Copyright -->
+               <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+                   © 2021 Copyright:
+                   <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+               </div>
+               <!-- Copyright -->
+           </footer>
+           <!-- Footer -->
+       </div>
     </section>
 
     <!--Login Page-->
@@ -3048,7 +3110,7 @@
 
     </section>
 
-    <section id="Reservation" style="width: 100%; height: 100vh ;background-color: whitesmoke">
+    <section id="Reservation" style="width: 100%; height: 100vh ;background-color: white">
 
         <div class="container center-block ">
 
@@ -3241,9 +3303,9 @@
                                 <i class="fas fa-key"></i>
                                 Reserve
                             </button>
-                            <button type="button" class="btn btn-danger btn-lg btn-floating ms-2 me-2 shadow">
+                            <button type="button" class="btn btn-success btn-lg btn-floating ms-2 me-2 shadow">
                                 <i class="fas fa-times"></i>
-                                Cancel
+                                Back
                             </button>
                         </div>
 
