--- a/web/index.html
+++ b/web/index.html
@@ -762,7 +762,122 @@
     <!--CopyRight Page-->
     <section id="CopyRightPage" class="w-100 h-100" style="background-color: whitesmoke">
 
-       <div class="container-fluid w-100"  style="position: relative;top: 200px">
+        <div class="container-fluid">
+            <!-- Grid container -->
+            <div class="container p-4">
+                <!-- Section: Images -->
+                <section class="">
+                    <div class="row">
+                        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+                            <div
+                                    class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                                    data-ripple-color="light"
+                            >
+                                <img
+                                        src="https://mdbcdn.b-cdn.net/img/new/fluid/city/113.webp"
+                                        class="w-100"
+                                />
+                                <a href="#!">
+                                    <div
+                                            class="mask"
+                                            style="background-color: rgba(251, 251, 251, 0.2);"
+                                    ></div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+                            <div
+                                    class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                                    data-ripple-color="light"
+                            >
+                                <img
+                                        src="https://mdbcdn.b-cdn.net/img/new/fluid/city/111.webp"
+                                        class="w-100"
+                                />
+                                <a href="#!">
+                                    <div
+                                            class="mask"
+                                            style="background-color: rgba(251, 251, 251, 0.2);"
+                                    ></div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+                            <div
+                                    class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                                    data-ripple-color="light"
+                            >
+                                <img
+                                        src="https://mdbcdn.b-cdn.net/img/new/fluid/city/112.webp"
+                                        class="w-100"
+                                />
+                                <a href="#!">
+                                    <div
+                                            class="mask"
+                                            style="background-color: rgba(251, 251, 251, 0.2);"
+                                    ></div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+                            <div
+                                    class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                                    data-ripple-color="light"
+                            >
+                                <img
+                                        src="https://mdbcdn.b-cdn.net/img/new/fluid/city/114.webp"
+                                        class="w-100"
+                                />
+                                <a href="#!">
+                                    <div
+                                            class="mask"
+                                            style="background-color: rgba(251, 251, 251, 0.2);"
+                                    ></div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+                            <div
+                                    class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                                    data-ripple-color="light"
+                            >
+                                <img
+                                        src="https://mdbcdn.b-cdn.net/img/new/fluid/city/115.webp"
+                                        class="w-100"
+                                />
+                                <a href="#!">
+                                    <div
+                                            class="mask"
+                                            style="background-color: rgba(251, 251, 251, 0.2);"
+                                    ></div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+                            <div
+                                    class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                                    data-ripple-color="light"
+                            >
+                                <img
+                                        src="https://mdbcdn.b-cdn.net/img/new/fluid/city/116.webp"
+                                        class="w-100"
+                                />
+                                <a href="#!">
+                                    <div
+                                            class="mask"
+                                            style="background-color: rgba(251, 251, 251, 0.2);"
+                                    ></div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- Section: Images -->
+            </div>
+            <!-- Grid container -->
+        </div>
+
+       <div class="container-fluid w-100"  style="position: relative;top: 100px">
            <!-- Footer -->
            <footer class="text-center text-lg-start bg-light text-muted w-100 ">
                <!-- Section: Social media -->
@@ -3107,6 +3222,50 @@
                 </div>
             </div>
         </div>-->
+
+        <header>
+            <!-- Navbar -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+                <div class="container-fluid">
+                    <button
+                            class="navbar-toggler"
+                            type="button"
+                            data-mdb-toggle="collapse"
+                            data-mdb-target="#navbarExample01"
+                            aria-controls="navbarExample01"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation"
+                    >
+                        <i class="fas fa-bars"></i>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarExample01">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item active">
+                                <a class="nav-link" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Features</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Pricing</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <!-- Navbar -->
+
+            <!-- Jumbotron -->
+            <div class="p-5 text-center bg-light" style="margin-top: 58px;">
+                <h1 class="mb-3">Heading</h1>
+                <h4 class="mb-3">Subheading</h4>
+                <a class="btn btn-primary" href="" role="button">Call to action</a>
+            </div>
+            <!-- Jumbotron -->
+        </header>
 
     </section>
 
